--- a/Vin's Potatos/ourproduct.html
+++ b/Vin's Potatos/ourproduct.html
@@ -124,28 +124,28 @@
       </div>
       <h3 id="title3">Dehydrated Potatoes</h3>
       <div>
-        <img src="./Images/images (4).jpg" alt="Mashed" />
+        <img src="./Images/imagessss.jpg" alt="Mashed" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           eum.
         </p>
       </div>
       <div>
-        <img src="./Images/images (1).jpg" alt="Dehyd" />
+        <img src="./Images/images.jpg" alt="Dehyd" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           eum.
         </p>
       </div>
       <div>
-        <img src="./Images/images (2).jpg" alt="Chips" />
+        <img src="./Images/imagess.jpg" alt="Chips" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           eum.
         </p>
       </div>
       <div>
-        <img src="./Images/images (3).jpg" alt="Mash" />
+        <img src="./Images/imagesss.jpg" alt="Mash" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
           eum.
