--- a/Vin's Potatos/checkprice.html
+++ b/Vin's Potatos/checkprice.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Styles/page3.css" />
+    <script defr src="./JS/potatoapi.js"></script>
     <title>About US</title>
   </head>
   <body>
@@ -24,7 +25,9 @@
           src="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
           alt="Flowers"
         />
-        <button><a href="./checkprice.html">Check Price</a></button>
+        <button id="pricebutton">
+          <a href="./checkprice.html">Check Price</a>
+        </button>
       </picture>
     </div>
     <header>
@@ -59,6 +62,7 @@
           <h2>US no 1 Potato</h2>
           <!-- <p>I may add a picture here</p> -->
           <ul>
+            <img src="./Images/pexels-pixabay-1442481.jpg" alt="Icon" />
             <li>
               <label for="lbs">Enter lbs</label>
               <input
@@ -85,7 +89,7 @@
             <li>
               <input
                 type="radio"
-                name="Delivery"
+                name="Pickup"
                 id="Delivery"
                 value="Delivery"
               />
@@ -94,8 +98,11 @@
             <li>
               <button formaction="" id="button">Submit</button>
             </li>
+            <div id="calcdiv">
+              <h3 id="calculation"></h3>
+            </div>
             <li>
-              <a href="">Add to cart</a>
+              <button id="localstorage"><a href="">Add to cart</a></button>
             </li>
           </ul>
         </form>
@@ -104,6 +111,10 @@
         <form action="">
           <h2>Frozen</h2>
           <ul>
+            <img
+              src="./Images/aliet-kitchen-XNP8cMN8DsQ-unsplash.jpg"
+              alt="Frozen"
+            />
             <li>
               <label for="Number">Number of Packets</label>
               <input
@@ -124,15 +135,15 @@
               </select>
             </li>
             <li>
-              <label for="delivery">Pick up</label>
-              <input type="radio" name="Pickup" id="Pickup" value="Pickup" />
+              <label for="pickup">Pick up</label>
+              <input type="radio" name="Pickup" id="pickup" value="Pickup" />
             </li>
             <li>
-              <label for="delivery">Delivery</label>
+              <label for="delivery1">Delivery</label>
               <input
                 type="radio"
-                name="Delivery"
-                id="Delivery"
+                name="Pickup"
+                id="delivery1"
                 value="Delivery"
               />
             </li>
@@ -140,7 +151,7 @@
               <button formaction="" id="button">Submit</button>
             </li>
             <li>
-              <a href="">Add to cart</a>
+              <button id="localstorage"><a href="">Add to cart</a></button>
             </li>
           </ul>
         </form>
@@ -149,6 +160,7 @@
         <form action="">
           <h2>Dehydrated</h2>
           <ul>
+            <img src="./Images/images.jpg" alt="Frozen" />
             <li>
               <label for="Number1">Number of Packets</label>
               <input
@@ -176,8 +188,8 @@
               <label for="delivery">Delivery</label>
               <input
                 type="radio"
-                name="Delivery"
-                id="Delivery"
+                name="Pickup"
+                id="Delivery2"
                 value="Delivery"
               />
             </li>
@@ -185,7 +197,7 @@
               <button formaction="" id="button">Submit</button>
             </li>
             <li>
-              <a href="">Add to cart</a>
+              <button id="localstorage"><a href="">Add to cart</a></button>
             </li>
           </ul>
         </form>
