--- a/Vin's Potatos/Index.html
+++ b/Vin's Potatos/Index.html
@@ -24,7 +24,7 @@
           src="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
           alt="Flowers"
         />
-        <button><a href="./checkprice.html">Check Price</a></button>
+        <a href="./checkprice.html">Check Price</a>
       </picture>
     </div>
     <header>
