--- a/Vin's Potatos/checkprice.html
+++ b/Vin's Potatos/checkprice.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Styles/page3.css" />
-    <script defr src="./JS/potatoapi.js"></script>
+    <script defer src="./JS/potatoapi.js"></script>
     <title>About US</title>
   </head>
   <body>
