Vin's last commit

--- a/Vin's Potatos/Index.html
+++ b/Vin's Potatos/Index.html
@@ -19,12 +19,13 @@
           srcset="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
         />
         <!-- <source media="(min-width:1600px)" srcset="./images/rsz_small.jpg" /> -->
+
         <img
           id="banner"
           src="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
           alt="Flowers"
         />
-        <a href="./checkprice.html">Check Price</a>
+        <a href="checkprice.html">Check Price</a>
       </picture>
     </div>
     <header>
