--- a/Vin's Potatos/ourproduct.html
+++ b/Vin's Potatos/ourproduct.html
@@ -24,8 +24,8 @@
           src="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
           alt="Flowers"
         />
-        <a href="./checkprice.html">Check Price</a>
       </picture>
+      <a href="checkprice.html" class="pictureA">Check Price</a>
     </div>
     <header>
       <nav>
