--- a/Vin's Potatos/contactus.html
+++ b/Vin's Potatos/contactus.html
@@ -24,8 +24,8 @@
           src="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
           alt="Flowers"
         />
-        <a href="./checkprice.html">Check Price</a>
       </picture>
+      <a href="checkprice.html" class="pictureA">Check Price</a>
     </div>
     <header>
       <nav>
@@ -71,7 +71,7 @@
         <label for="Complaint">Complaint</label>
       </div>
 
-      <form action="">
+      <form>
         <ul>
           <li>
             <label for="fname">First Name</label>
