--- a/Vin's Potatos/Index.html
+++ b/Vin's Potatos/Index.html
@@ -49,17 +49,12 @@
       <h3>About US</h3>
       <img id="img1" src="./Images/potatoes-Belfast.jpg" alt="Home_Pic1" />
       <p id="mainp1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam a
-        reprehenderit enim, doloribus, tempore possimus, praesentium
-        voluptatibus accusamus neque eum recusandae laboriosam quidem omnis
-        officia expedita quis unde magnam culpa! Consectetur delectus molestias
-        beatae aut ipsa tempora nostrum? Blanditiis voluptatem iusto quis
-        adipisci nobis esse rerum doloribus odit, fugit aliquam expedita dicta
-        similique quo, corporis itaque rem iure quae vero ad id temporibus quasi
-        atque alias? Quia rerum fuga cupiditate doloribus deleniti cumque
-        aliquam libero labore dolore, maxime ratione non omnis iste illum ad nam
-        provident quos perferendis. Est ratione deserunt soluta id quidem ab,
-        itaque perspiciatis fuga! Sequi, saepe?
+        Vin's Idaho Potatoes are proudly grown in Vin's Valley Idaho. We have
+        been delivering photos to American communities since January 2000. All
+        potatoes are washed and clean before delivering. We make sure that we
+        serve our product with 100 % freshness guaranteed. The types of Potato
+        we have are Russet potato, Burbank Potato, Red potato, Yellow potato and
+        sweet potato.
       </p>
       <br />
 
@@ -70,17 +65,16 @@
         alt="Home_Pic2"
       />
       <p id="mainp2">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto
-        veritatis est eaque maxime dolores explicabo ad ullam culpa? Culpa
-        veritatis exercitationem praesentium. Aperiam, autem unde. Officia ea
-        mollitia quo quasi possimus maxime, corporis unde porro saepe eum quod
-        in explicabo aliquam numquam aspernatur! In maxime odio inventore odit
-        voluptatibus. Accusamus, fuga temporibus illo nihil perspiciatis quas,
-        nostrum facere vel earum molestiae fugit ullam assumenda repudiandae
-        aliquam voluptatum dolores consequatur nam commodi! Repellendus
-        dignissimos illo officia delectus, deserunt odio iste nostrum placeat
-        nulla quo. Quo, odio ipsum. Iusto vero ipsa ratione doloribus sequi
-        reprehenderit esse deserunt ipsum laudantium, perspiciatis tempora fuga.
+        The potato is about 80% water and 20% solids. An 8 ounce baked or boiled
+        potato has only about 100 calories. The average American eats about 124
+        pounds of potatoes per year while Germans eat about twice as much. In
+        1974, an Englishman named Eric Jenkins grew 370 pounds of potatoes from
+        one plant.
+        <br />
+        In addition to starch, potatoes contain vitamins, minerals, and fiber.
+        They're rich in vitamin C, which is an antioxidant. Potatoes were a
+        life-saving food source in early times because the vitamin C prevented
+        scurvy.
       </p>
     </main>
     <footer>
