--- a/Vin's Potatos/favroitereceipe.html
+++ b/Vin's Potatos/favroitereceipe.html
@@ -61,36 +61,54 @@
         />
       </div>
       <div id="p4div1">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          fuga laboriosam non praesentium repellat at distinctio adipisci
-          temporibus dignissimos totam, cumque ipsum veritatis placeat molestias
-          est voluptate neque dicta itaque. Unde cupiditate ipsam excepturi!
-          Veritatis ducimus molestiae voluptatem velit quia eos aperiam ea iure
-          beatae ratione explicabo aliquid, et ad.
-        </p>
+        <h2>Our mashed potatoes recepie</h2>
+        <ol>
+          <li>
+            Use Yukon Gold Potatoes. They are the best potatoes for mashing. ..
+          </li>
+          <li>Boil Your Potatoes in Large Pieces. ...</li>
+          <li>Keep Your Potatoes Hot. ...</li>
+          <li>Add Fat First. ...</li>
+          <li>Taste Constantly. ...</li>
+          <li>Don't Add Your Liquid All at Once. ...</li>
+          <li>Infuse Your Fat with Aromatics.</li>
+        </ol>
         <br />
         <!-- </div>
       <div id="p4div2"> -->
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          fuga laboriosam non praesentium repellat at distinctio adipisci
-          temporibus dignissimos totam, cumque ipsum veritatis placeat molestias
-          est voluptate neque dicta itaque. Unde cupiditate ipsam excepturi!
-          Veritatis ducimus molestiae voluptatem velit quia eos aperiam ea iure
-          beatae ratione explicabo aliquid, et ad.
-        </p>
+        <h2>Baked Potato</h2>
+        <ul>
+          <li>
+            Russet potatoes: Technically, you can make baked potatoes with any
+            type of potatoes. But to make the best baked potatoes, I strongly
+            believe that Russets are the way to go. The skins of Russet potatoes
+            are nice and thick, which allow them to crisp up perfectly in the
+            oven. And the insides are starchy, which make for an extra fluffy
+            and sweet filling.
+          </li>
+          <li>
+            Butter or olive oil: I also strongly recommend using butter to crisp
+            up your potato skins, which adds so much flavor and helps the skins
+            get extra golden. But if you prefer not to cook with butter, you
+            could sub in whatever type of high-heat cooking oil you prefer. (I
+            would recommend avocado oil or regular olive oil, not extra-virgin.)
+          </li>
+        </ul>
         <br />
         <!-- </div>
       <div id="p4div3"> -->
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          fuga laboriosam non praesentium repellat at distinctio adipisci
-          temporibus dignissimos totam, cumque ipsum veritatis placeat molestias
-          est voluptate neque dicta itaque. Unde cupiditate ipsam excepturi!
-          Veritatis ducimus molestiae voluptatem velit quia eos aperiam ea iure
-          beatae ratione explicabo aliquid, et ad.
-        </p>
+        <h2>Our baked potatoes</h2>
+        <ul>
+          <li>
+            Similar to this Grilled Salmon in Foil, grilling the potatoes in
+            foil traps heat, allowing the potatoes to steam and the insides to
+            become tender.
+          </li>
+          <li>
+            The heat of the grill turns the outsides deep golden and crisp. I
+            always pick the crispiest ones of the pack.
+          </li>
+        </ul>
       </div>
     </main>
     <footer>
