--- a/Vin's Potatos/ourproduct.html
+++ b/Vin's Potatos/ourproduct.html
@@ -53,8 +53,11 @@
           alt="Brown_Potatoes"
         />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          They're rich in vitamin C, which is an antioxidant. Potatoes were a
+          life-saving food source in early times because the vitamin C prevented
+          scurvy. Another major nutrient in potatoes is potassium, an
+          electrolyte which aids in the workings of our heart, muscles, and
+          nervous system.
         </p>
       </div>
       <div>
@@ -63,8 +66,11 @@
           alt="Normal_Potatoes"
         />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          Russet potatoes are also a good source of minerals, with each medium
+          potato providing 1.9 milligrams of iron, or 10 percent of the DV; 52
+          milligrams of magnesium, or 13 percent of the DV; 123 milligrams of
+          phosphorus, or 12 percent of the DV; 0.6 milligrams of zinc, or 4
+          percent of the DV; and 31 milligrams of calcium, ...
         </p>
       </div>
       <div>
@@ -73,8 +79,9 @@
           alt="Red_Potatoes"
         />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          Red Desiree Potatoes are part of the Red Potato family and are
+          considered to be the healthiest of all potatoes, as they contain the
+          highest levels of vitamins, minerals and healthy phytochemicals.
         </p>
       </div>
       <div>
@@ -83,8 +90,9 @@
           alt="Yellow_Potatoes"
         />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          Like most types of potatoes, yellow are an excellent source of
+          energy-boosting carbohydrates, vitamin C, and potassium, but are also
+          a good source of vitamin B6, thiamin, and dietary fiber
         </p>
       </div>
       <h3 id="title2">Frozen Vegetables</h3>
@@ -94,8 +102,10 @@
           alt="Broocli"
         />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          "Fresh veggies often taste the best, especially if the vegetable is in
+          season. But the good news is that the nutritional value of a vegetable
+          isn't reduced during either the canning or freezing process — making
+          canned or frozen veggies just as healthy as fresh ones.
         </p>
       </div>
       <div>
@@ -104,22 +114,29 @@
           alt="Vagies"
         />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          These include vitamin K, potassium, magnesium, phosphorus, and
+          calcium, in addition to copper, iron, zinc, vitamins A and C, and B
+          vitamins, according to the Plants review. These nutrients are known to
+          work in synergy to promote bone mass and bone strength.
         </p>
       </div>
       <div>
         <img src="./Images/engin-akyurt-cOz7ncnzk_c-unsplash.jpg" alt="Vag" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          Similar to canned veggies, frozen veggies are low cost and quite
+          stable. What's more is that the freezing process is very favorable
+          toward vegetables, with nutrients, vitamins and minerals all being
+          well-retained. In fact, frozen veggies may actually be more nutritious
+          than fresh ones, in some cases.
         </p>
       </div>
       <div>
         <img src="./Images/randy-fath-5aJVJvJ9rG8-unsplash.jpg" alt="Vagiess" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          In general, the differences in nutritional value between fresh and
+          frozen vegetables are so minor that they would unlikely impact your
+          overall health. When shopping for frozen vegetables, keep an eye out
+          for added sugar, salt, and sauces.
         </p>
       </div>
       <h3 id="title3">Dehydrated Potatoes</h3>
@@ -133,22 +150,30 @@
       <div>
         <img src="./Images/images.jpg" alt="Dehyd" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          Nutritionally speaking, instant mashed potatoes offer roughly the same
+          vitamins and minerals as the real mashed potatoes with the exception
+          of Vitamin C. To please palates, they tend to be higher in sodium,
+          significantly higher than the amount of salt home cooks would add when
+          making them at home from scratch
         </p>
       </div>
       <div>
         <img src="./Images/imagess.jpg" alt="Chips" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          The practical side of dehydrating potatoes is that you can almost make
+          a meal out of potatoes so to have them on hand to cook up at a moments
+          notice is super convenient. Dehydrated potatoes also make a great
+          addition to your food storage as they will last for years if stored
+          properly.
         </p>
       </div>
       <div>
         <img src="./Images/imagesss.jpg" alt="Mash" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-          eum.
+          Processed potatoes (such as dehydrated and frozen potatoes) deliver
+          the same nutrients as fresh potatoes, (such as potassium, vitamin C
+          and fiber), but the amounts will vary depending on the potato form.
+          Preparation methods have variable effects on potato nutrient content.
         </p>
       </div>
     </main>
