--- a/Vin's Potatos/checkprice.html
+++ b/Vin's Potatos/checkprice.html
@@ -43,7 +43,7 @@
         src="./Images/vins-idaho-potatoes-low-resolution-color-logo.png"
         alt="Logo"
       />
-      <h1>VIN'S IDAHO POTATO</h1>
+      <h1>VIN'S IDAHO POTATOES</h1>
     </div>
     <main>
       <div>
@@ -53,7 +53,7 @@
         <h2 id="API">API HERE</h2>
       </div>
       <div id="p3title">
-        <h2>Vin's Idaho Potato Price</h2>
+        <h2>Vin's Idaho Potatoes Price</h2>
       </div>
       <div id="form1">
         <form action="#">
@@ -223,7 +223,7 @@
       </div>
     </main>
     <footer>
-      <h3>VIN'S IDAHO POTATO &copy; 2022 - VIN</h3>
+      <h3>VIN'S IDAHO POTATOES &copy; 2022 - VIN</h3>
       <a href="./Index.html">Home</a>
       <a href="./ourproduct.html">Our Product</a>
       <a href="./checkprice.html">Pricing</a>
@@ -232,13 +232,13 @@
       <a href="./cart.html">Cart</a>
       <div class="social">
         <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook.png" alt="fb icon" />
+          <img src="Images/facebook.png" alt="fb icon" />
         </a>
         <a href="https://twitter.com" target="_blank">
-          <img src="images/twitter.png" alt="twitter icon" />
+          <img src="Images/twitter.png" alt="twitter icon" />
         </a>
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.png" alt="instagram icon" />
+          <img src="Images/instagram.png" alt="instagram icon" />
         </a>
       </div>
     </footer>
