--- a/Vin's Potatos/contactus.html
+++ b/Vin's Potatos/contactus.html
@@ -42,7 +42,7 @@
         src="./Images/vins-idaho-potatoes-low-resolution-color-logo.png"
         alt="Logo"
       />
-      <h1>VIN'S IDAHO POTATO</h1>
+      <h1>VIN'S IDAHO POTATOES</h1>
     </div>
     <main>
       <h2>Contact US</h2>
@@ -110,7 +110,7 @@
       </form>
     </main>
     <footer>
-      <h3>VIN'S IDAHO POTATO &copy; 2022 - VIN</h3>
+      <h3>VIN'S IDAHO POTATOES &copy; 2022 - VIN</h3>
       <a href="./Index.html">Home</a>
       <a href="./ourproduct.html">Our Product</a>
       <a href="./checkprice.html">Pricing</a>
@@ -119,13 +119,13 @@
       <a href="./cart.html">Cart</a>
       <div class="social">
         <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook.png" alt="fb icon" />
+          <img src="Images/facebook.png" alt="fb icon" />
         </a>
         <a href="https://twitter.com" target="_blank">
-          <img src="images/twitter.png" alt="twitter icon" />
+          <img src="Images/twitter.png" alt="twitter icon" />
         </a>
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.png" alt="instagram icon" />
+          <img src="Images/instagram.png" alt="instagram icon" />
         </a>
       </div>
     </footer>
