Form action page

--- a/Vin's Potatos/formaction.html
+++ b/Vin's Potatos/formaction.html
@@ -8,10 +8,71 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>
-      Thank you for your interest We will get back to you as soon as
-      possible!!!!
-    </h1>
-    <img src="./Images/Formactionpicture.png" alt="" />
+    <div>
+      <picture>
+        <source
+          media="(min-width:1000px)"
+          srcset="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
+        />
+        <source
+          media="(min-width:500px)"
+          srcset="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
+        />
+        <!-- <source media="(min-width:1600px)" srcset="./images/rsz_small.jpg" /> -->
+
+        <img
+          id="banner"
+          src="./Images/dan-meyers-IQVFVH0ajag-unsplashh.jpg"
+          alt="Flowers"
+        />
+      </picture>
+      <a href="checkprice.html" class="pictureA">Check Price</a>
+    </div>
+    <header>
+      <nav>
+        <a href="./Index.html">Home</a>
+        <a href="./ourproduct.html">Our Product</a>
+        <a href="./checkprice.html">Pricing</a>
+        <a href="./favroitereceipe.html">Our Recipe</a>
+        <a href="./contactus.html">Contact US</a>
+        <a href="./cart.html">Cart</a>
+      </nav>
+    </header>
+    <main>
+      <div id="logoh1">
+        <img
+          src="./Images/vins-idaho-potatoes-low-resolution-color-logo.png"
+          alt="Logo"
+        />
+        <h1>VIN'S IDAHO POTATOES</h1>
+      </div>
+      <h1>
+        Thank you for your interest We will get back to you as soon as
+        possible!!!!
+      </h1>
+      <img src="./Images/Formactionpicture.png" alt="" />
+    </main>
+    <footer>
+      <h3>VIN'S IDAHO POTATOES &copy; 2022 - VIN</h3>
+
+      <a href="./Index.html">Home</a>
+      <a href="./ourproduct.html">Our Product</a>
+      <a href="./checkprice.html">Pricing</a>
+      <a href="./favroitereceipe.html">Our Recipe</a>
+      <a href="./contactus.html">Contact US</a>
+      <a href="./cart.html">Cart</a>
+
+      <div class="social">
+        <a href="https://facebook.com" target="_blank">
+          <img src="Images/facebook.png" alt="fb icon" />
+        </a>
+        <a href="https://twitter.com" target="_blank">
+          <img src="Images/twitter.png" alt="twitter icon" />
+        </a>
+        <a href="https://instagram.com" target="_blank">
+          <img src="Images/instagram.png" alt="instagram icon" />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
