--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <li>
           Lesson 12: <a href="./Vin's Potatos/Index.html">Vin's Potatoes</a>
         </li>
+        <li>Final: <a href="./Vin's Potatos/Index.html">Final</a></li>
       </ul>
     </main>
     <hr />
