--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li>Lesson 01: <a href="#">Home Page</a></li>
 
         <li>
+          gjfjgdhgs
           Lesson 02:
           <a href="lesson2/design-principles.html">Design Principles</a>
         </li>
